--- a/app/assets/javascripts/index.html
+++ b/app/assets/javascripts/index.html
@@ -1,1 +1,13 @@
-index.html
+<body class="body-main">
+	<header>
+		<img ng-src="images/header.png">
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li>Artists</li>
+				<li>Cosmetic</li>
+				<li>About Us</li>
+			</ul>
+		</nav>
+	</header>
+</body>
