--- a/app/assets/javascripts/index.html
+++ b/app/assets/javascripts/index.html
@@ -6,7 +6,7 @@
 				<li>Home</li>
 				<li>Artists</li>
 				<li>Cosmetic</li>
-				<li>About Us</li>
+				<li>Appointments</li>
 			</ul>
 		</nav>
 	</header>
@@ -16,18 +16,44 @@
 			<img ng-src={{current_display}}>
 		</div>
 
-		<article id="featured-artist">
-			<h1>Featured Artist</h1>
-			<img ng-src={{featured_artist_img[0]}}>
-			<img ng-src={{featured_artist_img[0]}}>
-			<img ng-src={{featured_artist_img[0]}}>
-			<img ng-src={{featured_artist_img[0]}}>
-		</article>
-	</section>
+        <article id="featured-artist">
+            <section id="samples">
+                <img src=images/logo.jpg id="location">
+            </section>
+        </article>
+    </section>
 
-	<section id="news">
-	Latest news here
-	</section>
+    <section id="about">
+        <p>Rogue Tattoo is the most awesome tattoo place in Southern Oregon!  We do tattoos and cosmetic makeup and piercings and stuff.  We even clean our tools!  Come and see us today!
+        </p>
 
+    </section>
 
+    <section id="news">
+        <h1>Latest news here</h1>
+
+        <ul>
+            <li class="news-item">
+                <div class="date">01/01/2015</div>
+                <div class="title">Sample News Article Title</div>
+                <div class="news-content">
+                    Sample News Sample News Sample News Sample News Sample News Sample News Sample News Sample News Sample News Sample News Sample News Sample News Sample News
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <footer>
+        <ul>
+            <li id="address">
+                <address>1122 Crater Lake Hwy, Medford OR 97415</address>
+            </li>
+            <li id="phone">
+                Phone: 511-111-1111
+            </li>
+            <li id="hours">
+                Hours: Monday - Saturday: 9AM - 6PM
+            </li>
+        </ul>
+    </footer>
 </body>
