Fix url: Background image and header

--- a/app/assets/javascripts/index.html
+++ b/app/assets/javascripts/index.html
@@ -1,6 +1,6 @@
 <body class="body-main" ng-controller="homeController as homeCtrl">
 	<header>
-		<img ng-src="images/header.png">
+		<img src="images/header.png">
 		<nav>
 			<ul>
 				<li>Home</li>
