--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -9,7 +9,7 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="#">Artist</a></li>
+				<li><a href="/artists">Artist</a></li>
 				<li>Cosmetic</li>
 				<li>Appointments</li>
 			</ul>
