--- a/app/assets/javascripts/html/artists.html
+++ b/app/assets/javascripts/html/artists.html
@@ -3,8 +3,8 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/artists">Artist</a></li>
-				<li>Cosmetic</li>
+				<li><a href="/artists">Artists</a></li>
+				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
 				<li>Appointments</li>
 			</ul>
 		</nav>
