--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -9,8 +9,8 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/artists">Artist</a></li>
-				<li>Cosmetic</li>
+				<li><a href="/artists">Artists</a></li>
+				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
 				<li>Appointments</li>
 			</ul>
 		</nav>
@@ -28,17 +28,12 @@
             </ul>
 		</div>
 
-        <article id="featured-artist">
+        <article id="greetings">
             <section id="samples">
-                <img src=images/logo.jpg id="location">
+                        <p>Rogue Tattoo, a tattoo shop serving Southern Oregon, including Ashland, Medford, and Grants Pass.  Rogue Tattoo offers traditional, realism, tribal, black and grey, and Japanese tattoos, as well as Permanent Makeup.  Appointments prefered, but walk-ins welcome.
+                        </p>
             </section>
         </article>
-    </section>
-
-    <section id="about">
-        <p>Rogue Tattoo is the most awesome tattoo place in Southern Oregon!  We do tattoos and cosmetic makeup and piercings and stuff.  We even clean our tools!  Come and see us today!
-        </p>
-
     </section>
 
     <section id="news">
@@ -58,13 +53,13 @@
     <footer>
         <ul>
             <li id="address">
-                <address>1122 Crater Lake Hwy, Medford OR 97415</address>
+                <address>1050 Crater Lake Hwy, Medford OR 97504</address>
             </li>
             <li id="phone">
-                Phone: 511-111-1111
+                Phone: 541-622-8119
             </li>
             <li id="hours">
-                Hours: Monday - Saturday: 9AM - 6PM
+                Hours: Monday - Saturday: 11AM - 6PM
             </li>
         </ul>
     </footer>
