SEO config: SEO4Ajax

--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Rogue Tattoo: Southern Oregon Tattoo Shop</title>
+  <meta name="fragment" content="!">
   <meta name="description" content="Rogue Tattoo, a tattoo shop serving Southern Oregon, including Ashland, Medford, Grants Pass, and everywhere in between.  Owner Josh Ludlow.">
   <meta name="author" contents="Rubywebs.net">
 </head>
