Metatag data added

--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -2,6 +2,7 @@
   <title>Rogue Tattoo: Southern Oregon Tattoo Shop</title>
   <meta name="description" content="Rogue Tattoo, a tattoo shop serving Southern Oregon, including Ashland, Medford, Grants Pass, and everywhere in between.  Owner Josh Ludlow.">
   <meta name="author" contents="Rubywebs.net">
+  <meta name="fragment" content="!">
 </head>
 
 <body class="body-main" ng-controller="homeController as homeCtrl">
