--- a/app/assets/javascripts/html/artist.html
+++ b/app/assets/javascripts/html/artist.html
@@ -1,3 +1,7 @@
+<head>
+	<meta name="fragment" content="!">
+</head>
+
 <body class="body-main" ng-controller="view_artistController as artistCtrl">
 
 	<header>
