Hashbang url for SEO

--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -9,8 +9,8 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/artists">Artists</a></li>
+				<li><a href="/#!">Home</a></li>
+				<li><a href="/#!/artists">Artists</a></li>
 				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
 				<li>Appointments</li>
 			</ul>
