--- a/app/assets/javascripts/html/artists.html
+++ b/app/assets/javascripts/html/artists.html
@@ -6,8 +6,8 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/artists">Artists</a></li>
+				<li><a href="/#!">Home</a></li>
+				<li><a href="/#!/artists">Artists</a></li>
 				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
 				<li>Appointments</li>
 			</ul>
@@ -33,7 +33,7 @@
 					</div>
 					
 				</div>
-				<p class="more"><a href="/view_artist/{{artist.id}}">See More</a></p>
+				<p class="more"><a href="/#!/view_artist/{{artist.id}}">See More</a></p>
 			</div>
 			</li>
 		</ul>
