Social media and styles on Artists

--- a/app/assets/javascripts/html/artist.html
+++ b/app/assets/javascripts/html/artist.html
@@ -12,6 +12,8 @@
 	<h1 class="text-center">{{artist.data.name}}</h1>
 	<div id="artist-profile">
 		<img class="profile-avatar" ng-src={{artist.data.avatar}}/>
+		<a href={{artist.data.facebook}}><img class="social-media" src="/images/facebook.jpg" /></a>
+		<a href={{artist.data.instagram}}><img class="social-media" src="/images/instagram.jpg" /></a>
 	</div>
 
 	<div id="portfolio">
