--- a/app/assets/javascripts/html/artists.html
+++ b/app/assets/javascripts/html/artists.html
@@ -28,7 +28,8 @@
 					</div>
 					
 				</div>
-				<p class="more"><a href="/#!/view_artist/{{artist.id}}">See More</a></p>
+				<p class="more"><a href="/#!/view_artist/{{artist.id}}">See {{artist.name}}'s full tattoo portfolio</a></p>
+				<br>
 			</div>
 			</li>
 		</ul>
