--- a/app/assets/javascripts/html/artist.html
+++ b/app/assets/javascripts/html/artist.html
@@ -9,7 +9,7 @@
 		</nav>
 	</header>
 
-	<h1 class="text-center">{{artist.data.name}}</h1>
+	<h1 class="text-center show-artist">{{artist.data.name}}</h1>
 	<div id="artist-profile">
 		<img class="profile-avatar" ng-src={{artist.data.avatar}}/>
 		<a href={{artist.data.facebook}} target="new"><img class="social-media" src="/images/facebook.jpg" /></a>
@@ -32,14 +32,3 @@
 			<img ng-src={{fullsize}} alt="Full Size Preview" />
 		</div>
 	</div>
-	
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-58546449-2', 'auto');
-
-
-</script>
