Added rubywebs link to footer

--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -51,5 +51,8 @@
             <li id="hours">
                 Hours: Monday - Saturday: 11AM - 6PM
             </li>
+            <li>
+                <a href="http://www.rubywebs.net">Created and Maintained by Rubywebs.net</a>
+            </li>
         </ul>
     </footer>
