Update to address and hours

--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -43,13 +43,13 @@
     <footer>
         <ul>
             <li id="address">
-                <address>1050 Crater Lake Hwy, Medford OR 97504</address>
+                <address>1050 Crater Lake Ave, Medford OR 97504</address>
             </li>
             <li id="phone">
                 Phone: 541-622-8119
             </li>
             <li id="hours">
-                Hours: Monday - Saturday: 11AM - 6PM
+                Hours: Monday - Saturday: 11AM - 7PM
             </li>
             <li>
                 <a href="http://www.rubywebs.net">Created and Maintained by Rubywebs.net</a>
