--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -1,30 +1,31 @@
-
-	<header>
-		<nav>
-			<ul>
-				<li><a href="/#!/">Home</a></li>
+<div class="container-fluid">
+    <div class="row">
+        <header>
+        <nav>
+            <ul>
+				<li><a href="/#!/">Rogue Tattoo</a></li>
 				<li><a href="/#!/artists">Artists</a></li>
 				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
-				<li></li>
-			</ul>
-		</nav>
-        <img src="images/header.png">
-	</header>
-
-	<section id="main">
-		<div id="displays">
+            </ul>
+        </nav>
+        </header>
+        <section id="displays" class="col-md-8">
             <ul>
                 <li class="list-display" ng-repeat="data in display.data">
-                    <div class="display" style="background-image: url('{{data.image}}');">
-
+                    <div>
+                        <img class="display" ng-src='{{data.image}}'>
                     </div>
                 </li>
             </ul>
-		</div>
+        </section>
+    
+
+	<section id="main" class="col-md-4">
+
 
         <article id="greetings">
             <section id="rogue-info">
-                        <h1>Rogue Tattoo</h1>
+                        <img class="logo" ng-src="/images/logo.jpg">
                         <p>Rogue Tattoo, a tattoo shop serving Southern Oregon, including Ashland, Medford, and Grants Pass.  Rogue Tattoo offers traditional, realism, tribal, black and grey, and Japanese tattoos, as well as Permanent Makeup.  Appointments prefered, but walk-ins welcome.
                         </p>
             </section>
@@ -39,7 +40,7 @@
             </section>
         </article>
     </section>
-
+</div>
     <footer>
         <ul>
             <li id="address">
@@ -56,3 +57,4 @@
             </li>
         </ul>
     </footer>
+</div>
