--- a/app/assets/javascripts/html/artists.html
+++ b/app/assets/javascripts/html/artists.html
@@ -1,13 +1,15 @@
-	<header>
-		<nav>
-			<ul>
-				<li><a href="/#!/">Home</a></li>
+        <header>
+        <nav>
+            <ul>
+				<li><a href="/#!/">Rogue Tattoo</a></li>
 				<li><a href="/#!/artists">Artists</a></li>
 				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
-				<li>Appointments</li>
-			</ul>
-		</nav>
-	</header>
+				<li class="float-right margin-zero"><a href="https://www.facebook.com/RogueTattoos" target="new"><img ng-src="/images/facebook.jpg"></a></li>
+				<li class="float-right margin-zero"><a href="https://www.instagram.com/roguetattoo1050" target="new"><img ng-src="/images/instagram.jpg"></a></li>
+				<li id="pin" class="float-right margin-zero"><a data-pin-do="buttonBookmark" data-pin-tall="true" href="https://www.pinterest.com/pin/create/button/"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_28.png" /></a></li>
+            </ul>
+        </nav>
+        </header>
 
 	<section id="artists">
 		<div>
