--- a/app/assets/javascripts/html/index.html
+++ b/app/assets/javascripts/html/index.html
@@ -6,6 +6,8 @@
 				<li><a href="/#!/">Rogue Tattoo</a></li>
 				<li><a href="/#!/artists">Artists</a></li>
 				<li><a href="http://www.permanentmakeupbybritta.com" target="new">Permanent Makeup</a></li>
+				<li class="float-right margin-zero"><a href="https://www.facebook.com/RogueTattoos" target="new"><img ng-src="/images/facebook.jpg"></a></li>
+				<li class="float-right margin-zero"><a href="https://www.instagram.com/roguetattoo1050" target="new"><img ng-src="/images/instagram.jpg"></a></li>
             </ul>
         </nav>
         </header>
@@ -67,5 +69,6 @@
                 </div>
             </ul>
         </section>
+
     </div>
 </div>
